Ensure debugger space is never hidden behind the code workspace

--- a/apps/style/JsDebuggerUi.scss
+++ b/apps/style/JsDebuggerUi.scss
@@ -51,6 +51,7 @@ $debug-area-initial-height: 43px;
   height: $debug-area-initial-height;
   left: 0;
   right: 0;
+  z-index: 2;
   max-height: calc(50% - #{($workspace-headers-height / 2) + 1}) !important;
 }
 
